crates/reinhardt-pages/tests/ui/style/fail/unsupported_item_attribute.rs
use reinhardt_pages::{style_def};

#[deprecated]
#[style_def]
static STYLES: CardStyles = style! { .card { color: red; } };

fn main() {}
