crates/reinhardt-pages/tests/ui/style/fail/unsupported_item_attribute.stderr
error: unsupported attribute on style definition
 --> tests/ui/style/fail/unsupported_item_attribute.rs:3:1
  |
3 | #[deprecated]
  | ^^^^^^^^^^^^^
